Fixed table in mobile view overflowing

--- a/style.scss
+++ b/style.scss
@@ -134,6 +134,7 @@ tbody {
 
 table {
   margin: auto;	
+  overflow: auto;
 }
 
 table td + td { 
